# htrflow

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  MANIFEST.in  Makefile  README.md  azure-pipelines.yml  config.py  cookiecutter.json  enviroment.yml  hatch.toml  index.html  index.md  latest  mkdocs.yml  objects.inv  publiccode.yml  pyproject.toml  sitemap.xml  test_.py  tox.ini  versions.json
.azure-pipelines/: tox.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-and-push-docker.yml  code_quality.yml  deploy-docs.yml  docs.yml  draft.yml  publish-pypi.yml  release.yml  tests.yml  tests_gpu.yml  trufflehog.yml
0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.0.1/assets_hf/: datasets.html  models.html  spaces.html
0.0.1/core/: design.html  design.md  ecosystem.html
0.0.1/getting_started/: data_structure.html  models.html  pipeline.html  quick_start.html  serialization.html
0.0.1/notebooks/: demo.html
0.0.1/search/: search_index.json
0.0.2/: 404.html  index.html  sitemap.xml
0.0.2/assets_hf/: datasets.html  models.html  models.md  spaces.html  spaces.md
0.0.2/core/: design.html  ecosystem.html
0.0.2/getting_started/: data_structure.html  models.html  models.md  pipeline.html  quick_start.html  serialization.html
0.0.2/notebooks/: demo.html
0.0.3/: 404.html  contributing.html  index.html  index.md  sitemap.xml
0.0.3/api/: index.html  index.md
0.0.3/core/: design.html  ecosystem.html
0.0.3/getting_started/: data_structure.html  index.html  models.html  pipeline.html  quick_start.html  serialization.html
0.0.3/hf/: datasets.html  models.html  models.md  spaces.html
0.0.3/notebooks/: demo.html
0.0.3/search/: search_index.json
0.0.4/: 404.html  index.html  index.md  objects.inv  sitemap.xml
0.0.4/api/: index.html  index.md
0.0.4/getting_started/: data_structure.html  index.html  models.html  pipeline.html  quick_start.html  serialization.html
0.0.4/help/: contributing.html  faq.html  index.html  license.html
0.0.4/hf/: datasets.html  index.html  models.html  spaces.html
0.0.4/integrations/: index.html
0.0.4/notebooks/: demo.html
0.0.4/search/: search_index.json
0.0.5/: 404.html  index.html  index.md  sitemap.xml
0.0.5/api/: index.html
0.0.5/getting_started/: cli.html  data_structure.html  index.html  installation.html  models.html  pipeline.html  quick_start.html  serialization.html  serialization.md
0.0.5/help/: contributing.html  faq.html  index.html  license.html
0.0.5/integrations/: index.html
0.0.5/notebooks/: demo.html
0.0.5/resources/: cases.html  datasets.html  datasets.md  index.html  index.md  models.html  spaces.html
0.0.5/search/: search_index.json
0.0.6/: 404.html  index.html  index.md  sitemap.xml
0.0.6/api/: index.html
0.0.6/getting_started/: cli.html  data_structure.html  data_structure.md  index.html  index.md  installation.html  models.html  pipeline.html  quick_start.html  quick_start.md  serialization.html
0.0.6/help/: contributing.html  faq.html  index.html  license.html  license.md
0.0.6/integrations/: haas.html  haas.md  iiif.html  index.html  search.html  spaces.html
0.0.6/notebooks/: demo.html
0.0.6/resources/: cases.html  datasets.html  index.html  models.html
0.0.7/: 404.html  index.html  objects.inv  sitemap.xml
0.0.7/api/: index.html
0.0.7/getting_started/: cli.html  data_structure.html  index.html  installation.html  models.html  pipeline.html  quick_start.html  serialization.html
0.0.7/help/: contributing.html  faq.html  index.html  license.html
0.0.7/integrations/: haas.html  iiif.html  index.html  search.html  spaces.html
0.0.7/notebooks/: demo.html
0.0.7/resources/: cases.html  datasets.html  index.html  models.html
0.0.7/search/: search_index.json
api/image/: image.html  image.md
api/results/: index.html  results.html  results.md
api/volume/: index.html  node.html  volume.html  volume.md
assets_hf/: datasets.html  models.html  models.md  spaces.html
core/: design.html  design.md  ecosystem.html  ecosystem.md
data/pipelines/: demo.yaml  im.yaml  svea-pipeline.yaml
docker/: .dockerignore  Dockerfile  argo_htrflow.yaml  base.dockerfile  docker-compose.yml  htrflow.dockerfile  htrflow.dockerfile.dockerignore  htrflow_onnx_wordleveltrocr.dockerfile  htrflow_openmmlab.dockerfile  test.txt
docs/: README.md  api.md  changelog.md  cruft-and-cookiecutter.md  hatch_guide.md  index.md
docs/api/: index.md
docs/core/: design.md
docs/getting_started/: data_structure.md  document_model.md  index.md  installation.md  models.md  pipeline.md  quick_start.md
docs/help/: contributing.md  faq.md  index.md
docs/hf/: datasets.md  models.md  spaces.md
docs/integrations/: index.md  spaces.md
docs/notebooks/: attention-based-word-segmentation.ipynb  demo.ipynb
docs/reference/: index.md  models.md  pipeline-steps.md
docs/resources/: index.md  models.md  spaces.md
docs/stylesheets/: extra.css
example_outputs/A0068699/: A0068699_00021.xml  A0068699_00023.xml
examples/pipelines/: demo.yaml
getting_started/: data_structure.html  models.html  models.md  pipeline.html  quick_start.html  serialization.html  usage_of_model.html
hooks/: post_hook.py  pre_hook.py
notebooks/: demo.html  demo2.html  demo2.ipynb  demo_test_.py  demo_test_old.py
scripts/: cli.py  main.py  openmim_install.py  openmmlab_install.py
search/: search_index.json
src/: main.py
stylesheets/: extra.css
v0.1.2/: 404.html  index.html  sitemap.xml
v0.1.2.post1/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.3/: 404.html  index.html  sitemap.xml
v0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.2.1/: 404.html  index.html  sitemap.xml
v0.2.2/: 404.html  index.html  sitemap.xml
v0.2.4/: 404.html  index.html  sitemap.xml
v0.2.5/: 404.html  index.html  sitemap.xml
v0.2.6/: 404.html  index.html  objects.inv  sitemap.xml
{{cookiecutter.project_name}}/: pyproject.toml  pyvenv.cfg  workflow.org
(+581 files in other folders)
